# readium-sdk

./: .gitmodules  CMakeLists.txt
Platform/Apple/ePub3.xcodeproj/: project.pbxproj
Platform/Windows/: epub3.vcxproj
Platform/Windows/ReadiumSDK/ePub3/: ePub3.vcxproj
ePub3/: _config.h
ePub3/ePub/: encryption.cpp  font_obfuscation.cpp  font_obfuscation.h  zip_archive.cpp  zip_archive.h
ePub3/utilities/: byte_stream.h  executor.h  iri.cpp
